Fix shift when menu is open

--- a/frontend/src/Components/Menu/Menu.scss
+++ b/frontend/src/Components/Menu/Menu.scss
@@ -2,36 +2,29 @@
 
 .menu {
     position: absolute;
+    width: 256px;
+    overflow: auto;
+    max-height: calc(100vh - #{$headerHeight} - #{$footerHeight});
     left: $mainPaddingDesktop;
     @media screen and (max-width: $breakPoint) {
+        max-height: calc(100vh - #{$headerHeightMobile} - #{$footerHeight});
         left: $mainPaddingMobile;
     }
-    // .ant-menu-root {
-    //     // border-right: 1px solid lightgray;
-    //     // border-bottom: 1px solid lightgray;
-    //     // border-bottom: 1px solid #f0f0f0;
-    // }
-
-    width: 256px;
-
-    // transition-property: width;
-    // transition-duration: 0.5s;
-
-    // overflow: hidden;
-
-    
 
     &__overlay {
         position: absolute;
-        width: 100%;
+        width: 100%;        
+        background-color: rgba(0, 0, 0, 0.7);
         height: calc(100% - #{$headerHeight});
         @media screen and (max-width: $breakPoint) {
             height: calc(100% - #{$headerHeightMobile});
         }
-        background-color: rgba(0, 0, 0, 0.7);        
+    }
+}
 
-        // &.menu-hidden {
-        //     display: none;
-        // }
+body {
+    &.menuIsOpen {
+        position: fixed;
+        overflow-y: scroll;
     }
 }
